[workspace]
members = [
    "queue_rs",
    "queue_py",
]

resolver = "2"

[workspace.package]
version = "0.1.8"
edition = "2021"
authors = ["Ivan Kudriavtsev <ivan.a.kudryavtsev@gmail.com>"]
description = "Rust persistent queue based on RocksDB with Python bindings"
homepage = "https://github.com/insight-platform/RocksQ"
repository = "https://github.com/insight-platform/RocksQ"
readme = "README.md"
keywords = ["database", "queue", "persistent", "rocksdb", "python"]
categories = ["algorithms", "data-structures"]
license="Apache-2.0"
rust-version = "1.70"

[profile.release]
opt-level = 3

[profile.bench]
opt-level = 3

