[package]
name = "rocksq"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
queue_rs = { path = "../queue_rs" }

[dependencies.pyo3]
version = "0.22.2"

[dev-dependencies]
serial_test = "3"

[build-dependencies]
pyo3-build-config = "0.22.2"
cbindgen = "0.27.0"

[package.metadata.maturin]
python-source = "python"

[features]
extension-module = ["pyo3/extension-module"]
default = ["extension-module"]

[dependencies.rocksdb]
version = "0.22"
default-features = false
